[metadata]
name = dslib
version = attr: dslib.__version__
author = Shivam Rana
author_email = shivam.rana@swiggy.in
description = A library for Data Scientists containing common interfaces (classes and functions).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://bitbucket.org/swigy/dslib
project_urls =
    Bug Tracker = https://bitbucket.org/swigy/dslib/jira
    Documentation =
classifiers =
    Intended Audience :: Data Scientists

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =


[options.packages.find]
where = src
exclude =
    tests
    tests.*
